style: ajusta ordem dos cards equipe simios

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -113,7 +113,7 @@
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Ana Martins</h3>
                                     <p class="card-text text-white">
-                                        Organizadora do Coletivo e Buscadora de clientes
+                                        Organizadora e Buscadora de clientes
                                     </p>
                                 </div>
                             </div>
@@ -142,23 +142,34 @@
                         </div>
                         <div class="carousel-item">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
-                                style="width: 18.125rem; height: 21.312rem">
-                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
-                                    alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
+                                style="width: 18.125rem; height: 21.312rem;">
+                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
+                                    alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h3 class="card-title text-white fs-2 w-50">João Arruda</h3>
-                                    <p class="card-text text-white">Web Designer</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Luís Duarte</h3>
+                                    <p class="card-text text-white">Documenter e Tester</p>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
-                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
-                                    alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
+                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
+                                    alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h3 class="card-title text-white fs-2 w-50">Juan Mendes</h3>
-                                    <p class="card-text text-white">Desenvolvedor</p>
+                                    <h3 class="card-title text-white fs-2 w-50">Melissa Ameida</h3>
+                                    <p class="card-text text-white">Coordenadora do Design e Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
+                                style="width: 18.125rem; height: 21.312rem">
+                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
+                                    alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h3 class="card-title text-white fs-2 w-50">João Arruda</h3>
+                                    <p class="card-text text-white">Web Designer</p>
                                 </div>
                             </div>
                         </div>
@@ -176,33 +187,22 @@
                         <div class="carousel-item">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
+                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
+                                    alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
+                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                                    <h3 class="card-title text-white fs-2 w-50">Juan Mendes</h3>
+                                    <p class="card-text text-white">Desenvolvedor</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
+                                style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                                     alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h3>
                                     <p class="card-text text-white">Desenvolvedora</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
-                                style="width: 18.125rem; height: 21.312rem;">
-                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
-                                    alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h3 class="card-title text-white fs-2 w-50">Luís Duarte</h3>
-                                    <p class="card-text text-white">Documenter</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
-                                style="width: 18.125rem; height: 21.312rem;">
-                                <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
-                                    alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
-                                <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h3 class="card-title text-white fs-2 w-50">Melissa Ameida</h3>
-                                    <p class="card-text text-white">Coordenadora do Design e Designer</p>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                             alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Ana Martins</h3>
-                            <p class="card-text text-white lh-1">Organizadora do Coletivo e Buscadora de clientes</p>
+                            <p class="card-text text-white lh-1">Organizadora e Buscadora de clientes</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -249,20 +249,29 @@
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
+                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
+                            alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Luís Duarte</h3>
+                            <p class="card-text text-white lh-1">Documenter e Tester</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
+                        style="width: 18.125rem; height: 21.312rem;">
+                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
+                            alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Ameida</h3>
+                            <p class="card-text text-white lh-1">Coordenadora do Design e Designer</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
+                        style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                             alt="Foto do colaborador João" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">João Arruda</h3>
                             <p class="card-text text-white lh-1">Designer</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
-                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
-                            alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h3 class="card-title text-white fs-2 w-50 lh-1">Juan Mendes</h3>
-                            <p class="card-text text-white lh-1">Desenvolvedor</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -276,29 +285,20 @@
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
+                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
+                            alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
+                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Juan Mendes</h3>
+                            <p class="card-text text-white lh-1">Desenvolvedor</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
+                        style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                             alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Leonarda Oliveira</h3>
                             <p class="card-text text-white lh-1">Desenvolvedora</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
-                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
-                            alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h3 class="card-title text-white fs-2 w-50 lh-1">Luís Duarte</h3>
-                            <p class="card-text text-white lh-1">Documenter</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
-                        <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
-                            alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
-                        <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Ameida</h3>
-                            <p class="card-text text-white lh-1">Coordenadora do Design e Designer</p>
                         </div>
                     </div>
                 </div>
