--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo Viver Mais</title>
+    <title>Grupo Símios</title>
+    <meta name="description" content="O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.">
     <link rel="shortcut icon" href="./img/logo/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,7 +22,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/logo/logo.svg" alt="Logo" width="140" height="70">
+                <img src="./img/logo/logo.svg" alt="Logo Grupo Viver Mais" width="140" height="70">
             </a>
             <button class="navbar-toggler rounded-circle fs-1 p-2" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,7 +64,7 @@
                         auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
                 </div>
                 <div class="col-12 col-md-4 text-center">
-                    <img class="img-fluid " src="./img/grupo-simios/logo-simios.png" alt="">
+                    <img class="img-fluid " src="./img/grupo-simios/logo-simios.png" alt="Logo Grupo Símios">
                 </div>
             </div>
         </div>
@@ -73,7 +75,7 @@
             <div class="container">
                 <div class="row align-items-center flex-column flex-sm-row">
                     <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0">
-                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
+                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="Cacto e sol">
                     </div>
                     <div class="col-12 col-md-8 col-projetos my-4 mb-md-0 px-4 px-md-5">
                         <h2 class="h-projetos display-3">Projeto ONGs na Web</h2>
@@ -109,7 +111,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
-                                    alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem" />
+                                    alt="Foto Ana Martins Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Ana Martins</h3>
                                     <p class="card-text text-white">
@@ -122,7 +124,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
-                                    alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem" />
+                                    alt="Foto Erick Rosa Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Erick Rosa</h3>
                                     <p class="card-text text-white"> Organizador, Buscador de clientes e Analista</p>
@@ -133,7 +135,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
-                                    alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem" />
+                                    alt="Foto Gabriel Santiago Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Gabriel Santiago</h3>
                                     <p class="card-text text-white">Documenter e Tester</p>
@@ -144,7 +146,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
-                                    alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
+                                    alt="Foto Luís Duarte Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Luís Duarte</h3>
                                     <p class="card-text text-white">Documenter e Tester</p>
@@ -155,9 +157,9 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
-                                    alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
+                                    alt="Foto Melissa Almeida Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                                    <h3 class="card-title text-white fs-2 w-50">Melissa Ameida</h3>
+                                    <h3 class="card-title text-white fs-2 w-50">Melissa Almeida</h3>
                                     <p class="card-text text-white">Coordenadora do Design e Designer</p>
                                 </div>
                             </div>
@@ -166,7 +168,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
-                                    alt="Foto do colaborador João" style="width: 10rem; height: 10rem" />
+                                    alt="Foto João Arruda Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">João Arruda</h3>
                                     <p class="card-text text-white">Web Designer</p>
@@ -177,7 +179,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
-                                    alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
+                                    alt="Foto Julie Godoi Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Julie Godoi</h3>
                                     <p class="card-text text-white">Coordenadora do Desenvolvimento e Desenvolvedora</p>
@@ -188,7 +190,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
-                                    alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
+                                    alt="Foto Juan Mendes Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Juan Mendes</h3>
                                     <p class="card-text text-white">Desenvolvedor</p>
@@ -199,7 +201,7 @@
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
-                                    alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
+                                    alt="Foto Leonarda Oliveira Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Leonarda Oliveira</h3>
                                     <p class="card-text text-white">Desenvolvedora</p>
@@ -223,7 +225,7 @@
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
-                            alt="Foto da colaboradora Ana" style="width: 10rem; height: 10rem;">
+                            alt="Foto Ana Martins Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Ana Martins</h3>
                             <p class="card-text text-white lh-1">Organizadora e Buscadora de clientes</p>
@@ -232,7 +234,7 @@
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
-                            alt="Foto do colaborador Erick" style="width: 10rem; height: 10rem;">
+                            alt="Foto Erick Rosa Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Erick Rosa</h3>
                             <p class="card-text text-white lh-1">Organizador, Buscador de clientes e Analista</p>
@@ -241,7 +243,7 @@
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
-                            alt="Foto do colaborador Gabriel" style="width: 10rem; height: 10rem;">
+                            alt="Foto Gabriel Santiago Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Gabriel Santiago</h3>
                             <p class="card-text text-white lh-1">Documenter e Tester</p>
@@ -250,7 +252,7 @@
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
-                            alt="Foto do colaborador Luís" style="width: 10rem; height: 10rem;">
+                            alt="Foto Luís Duarte Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Luís Duarte</h3>
                             <p class="card-text text-white lh-1">Documenter e Tester</p>
@@ -259,16 +261,16 @@
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
-                            alt="Foto da colaboradora Melissa" style="width: 10rem; height: 10rem;">
+                            alt="Foto Melissa Almeida Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
-                            <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Ameida</h3>
+                            <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Almeida</h3>
                             <p class="card-text text-white lh-1">Coordenadora do Design e Designer</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
                         style="width: 18.125rem; height: 21.312rem;">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
-                            alt="Foto do colaborador João" style="width: 10rem; height: 10rem;">
+                            alt="Foto João Arruda Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">João Arruda</h3>
                             <p class="card-text text-white lh-1">Designer</p>
