--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Viver Mais</title>
+    <meta name="description" content="ONG Grupo de Idosos Viver Mais: Fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.">
     <link rel="shortcut icon" href="./img/logo/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/logo/logo.svg" alt="Logo" width="140" height="70">
+                <img src="./img/logo/logo.svg" alt="Logo Grupo Viver Mais" width="140" height="70">
             </a>
             <button class="navbar-toggler rounded-circle fs-1 p-2" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -61,7 +63,7 @@
                         role="button">Apoie o Grupo</a>
                 </div>
                 <div class="col pt-0 mt-lg-5 pe-0 me-0 m-0 mb-md-0 d-flex justify-content-end">
-                    <img class="img-fluid" src="./img/banner.png" alt="">
+                    <img class="img-fluid" src="./img/banner.png" alt="Mulher idosa sorrindo">
                 </div>
             </div>
         </div>
@@ -72,7 +74,7 @@
             <div class="container">
                 <div class="row align-items-center about">
                     <div class="col-4 mt-5 mb-0 mb-lg-5 quem-somos text-center">
-                        <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
+                        <img src="./img/cacto.png" alt="Cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
                     <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-4 p-md-5 pt-4">
                         <h2 class="h2-quem display-3">Quem Somos</h2>
@@ -134,7 +136,7 @@
             <div class="container">
                 <div class="row align-items-center flex-column flex-sm-row">
                     <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0">
-                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
+                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="Cacto e Sol">
                     </div>
                     <div class="col-12 col-md-6 col-projetos my-4 mb-md-0 px-4 px-sm-5">
                         <h2 class="h-projetos display-3">Projetos</h2>
@@ -244,7 +246,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
-                        <img class="img-fluid" src="./img/maos-dadas.png" alt="">
+                        <img class="img-fluid" src="./img/maos-dadas.png" alt="Mãoes dadas">
                     </div>
                 </div>
             </div>
