--- a/index.html
+++ b/index.html
@@ -265,13 +265,14 @@
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
-                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
+                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px; border-radius: 8px;">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
                         <p class="p-apoia text-black">
-                            Banco de tal <br>
-                            CNPJ - 11.111/0001-11 <br>
-                            Nome da Instituição como aparece no Banco
+                            BANCO SICRED <br>
+                            CNPJ - 10.336.954/0001-23 <br>
+                            GRUPO DE IDOSOS VIVER MAIS <br>
+                            PIX: vivermaisosc@gmail.com
                         </p>
                     </div>
                 </div>
@@ -450,6 +451,69 @@
             </div>
         </div>
     </footer>
+    <style>
+
+html, body {
+   max-width: 100%;
+   overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #000000;
+}
+  
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: #29336D;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: white;
+}
+.wp-block-group {  
+z-index: 10;
+}
+iframe{
+z-index: 0;
+}
+#html, body {
+   max-width: 100%;
+   overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #000000;
+}
+  
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: #A24E2A;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: white;
+}
+.wp-block-group {  
+z-index: 10;
+}
+iframe{
+z-index: 0;
+}
+</style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
