feat: adiciona automacao de carousel

--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
                         <p class="p-atividades fs-5">Arrasta para o lado!</p>
                     </div>
                     <!--carrossel grande e extra grande-->
-                    <div class="col-7 p-0 d-none d-md-block d-lg-block d-xl-block carrossel">
+                    <div class="col-7 p-0 d-none d-md-block d-lg-block d-xl-block carrossel" data-ride="carousel">
                         <div id="carouselAtividadesMobile" class="carousel slide">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
+                                <div class="carousel-item active" data-bs-interval="2000">
                                     <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100"
                                         alt="Roda de Conversas">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/fisioterapia.png" class="d-block w-100"
                                         alt="Fisioterapia">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100"
                                         alt="Sessões de Filmes">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/jogos.png" class="d-block w-100" alt="Jogos">
                                 </div>
                             </div>
@@ -197,22 +197,22 @@
                         </div>
                     </div>
                     <!--carrossel pequena e média-->
-                    <div class="col-7 p-0 d-block d-md-none d-lg-none d-xl-none carrossel">
+                    <div class="col-7 p-0 d-block d-md-none d-lg-none d-xl-none carrossel" data-bs-ride="carousel">
                         <div id="carouselAtividades" class="carousel slide">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
+                                <div class="carousel-item active" data-bs-interval="2000">
                                     <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100"
                                         alt="Roda de Conversas">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100"
                                         alt="Fisioterapia">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100"
                                         alt="Sessões de Filmes">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./img/carrossel/mobile/jogos.png" class="d-block w-100" alt="Jogos">
                                 </div>
                             </div>
