--- a/index.html
+++ b/index.html
@@ -165,68 +165,54 @@
                         <p class="p-atividades fs-5">Arrasta para o lado!</p>
                     </div>
                     <!--carrossel grande e extra grande-->
-                    <div class="col-7 p-0 d-none d-md-block d-lg-block d-xl-block carrossel" data-ride="carousel">
-                        <div id="carouselAtividadesMobile" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="2000">
-                                    <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100"
-                                        alt="Roda de Conversas">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/fisioterapia.png" class="d-block w-100"
-                                        alt="Fisioterapia">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100"
-                                        alt="Sessões de Filmes">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/jogos.png" class="d-block w-100" alt="Jogos">
-                                </div>
+                    <div id="carouselAutoplaying" class="carousel slide col-7 p-0 d-none d-md-block d-lg-block d-xl-block" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100" alt="Roda de Conversas">
                             </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselAtividadesMobile" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselAtividadesMobile" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/fisioterapia.png" class="d-block w-100" alt="Fisioterapia">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100" alt="Sessões de Filmes">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/jogos.png" class="d-block w-100" alt="Jogos">
+                            </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                     <!--carrossel pequena e média-->
-                    <div class="col-7 p-0 d-block d-md-none d-lg-none d-xl-none carrossel" data-bs-ride="carousel">
-                        <div id="carouselAtividades" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="2000">
-                                    <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100"
-                                        alt="Roda de Conversas">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100"
-                                        alt="Fisioterapia">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100"
-                                        alt="Sessões de Filmes">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./img/carrossel/mobile/jogos.png" class="d-block w-100" alt="Jogos">
-                                </div>
+                    <div id="carouselMobileAutoplaying" class="carousel slide carrossel col-7 p-0 d-block d-md-none d-lg-none d-xl-none" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100" alt="Roda de Conversas">
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAtividades"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselAtividades"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100" alt="Fisioterapia">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100" alt="Sessões de Filmes">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./img/carrossel/mobile/jogos.png" class="d-block w-100" alt="Jogos">
+                            </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMobileAutoplaying" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselMobileAutoplaying" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -265,14 +251,13 @@
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
-                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px; border-radius: 8px;">
+                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
                         <p class="p-apoia text-black">
-                            BANCO SICRED <br>
-                            CNPJ - 10.336.954/0001-23 <br>
-                            GRUPO DE IDOSOS VIVER MAIS <br>
-                            PIX: vivermaisosc@gmail.com
+                            Banco de tal <br>
+                            CNPJ - 11.111/0001-11 <br>
+                            Nome da Instituição como aparece no Banco
                         </p>
                     </div>
                 </div>
@@ -451,69 +436,6 @@
             </div>
         </div>
     </footer>
-    <style>
-
-html, body {
-   max-width: 100%;
-   overflow-x: hidden;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background: #000000;
-}
-  
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background: #29336D;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background: white;
-}
-.wp-block-group {  
-z-index: 10;
-}
-iframe{
-z-index: 0;
-}
-#html, body {
-   max-width: 100%;
-   overflow-x: hidden;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background: #000000;
-}
-  
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background: #A24E2A;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background: white;
-}
-.wp-block-group {  
-z-index: 10;
-}
-iframe{
-z-index: 0;
-}
-</style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
