--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </header>
     <main>
-        <!--quem somos-->
+        <!--quem somoss-->
         <section class="bg-white" id="quem-somos">
             <div class="container">
                 <div class="row align-items-center about">
