refactor: Adiciona o code do PR #35 novamente

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </header>
     <main>
-        <!--quem somoss-->
+        <!--quem somos-->
         <section class="bg-white" id="quem-somos">
             <div class="container">
                 <div class="row align-items-center about">
@@ -272,13 +272,14 @@
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
-                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
+                    <img src="img/qr-code.png" alt="QR Code do Pix" width="120" class="rounded-4">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
                         <div class="p-apoia text-black">
-                            <p style="margin: 0;">Banco de tal</p>
-                            <p style="margin: 0;">CNPJ - 11.111/0001-11</p>
-                            <p style="margin: 0;">Nome da Instituição como aparece no Banco</p>
+                            <p class="m-0">BANCO SICRED</p>
+                            <p class="m-0">CNPJ: 10.336.954/0001-23</p>
+                            <p class="m-0">GRUPO DE IDOSOS VIVER MAIS</p>
+                            <p class="m-0">CHAVE PIX: vivermaisosc@gmail.com</p>
                         </div>
                     </div>
                 </div>
