--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
-                    <img src="img/qr-code.png" alt="QR Code do Pix" width="120" class="rounde">
+                    <img src="img/qr-code.png" alt="QR Code do Pix" width="120" class="rounded-4">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
                         <div class="p-apoia text-black">
