style: ajusta intervalo autoplaying dos carrosseis e icon de prev e next

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -105,9 +105,9 @@
                     </div>
                 </div>
                 <!-- Carrossel Colaboradores Mobile -->
-                <div id="carouselExample" class="carousel slide d-md-none">
+                <div id="carouselSimiosAutoplaying" class="carousel slide d-md-none" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item active" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
@@ -120,18 +120,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                                     alt="Foto Erick Rosa Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Erick Rosa</h3>
-                                    <p class="card-text text-white"> Organizador, Buscador de clientes e Analista</p>
+                                    <p class="card-text text-white">Organizador, Buscador de clientes e Analista</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
@@ -142,51 +142,51 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                                     alt="Foto Luís Duarte Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Luís Duarte</h3>
-                                    <p class="card-text text-white">Documenter e Tester</p>
+                                    <p class="card-text text-white">Documenter</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                                     alt="Foto Melissa Almeida Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Melissa Almeida</h3>
-                                    <p class="card-text text-white">Coordenadora do Design e Designer</p>
+                                    <p class="card-text text-white">Coordenadora e Designer</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                                     alt="Foto João Arruda Grupo Símios" style="width: 10rem; height: 10rem" />
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">João Arruda</h3>
-                                    <p class="card-text text-white">Web Designer</p>
+                                    <p class="card-text text-white">Designer</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                                     alt="Foto Julie Godoi Grupo Símios" style="width: 10rem; height: 10rem;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                                     <h3 class="card-title text-white fs-2 w-50">Julie Godoi</h3>
-                                    <p class="card-text text-white">Coordenadora do Desenvolvimento e Desenvolvedora</p>
+                                    <p class="card-text text-white">Coordenadora e Desenvolvedora</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-5 mx-md-2"
                                 style="width: 18.125rem; height: 21.312rem;">
                                 <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
@@ -209,14 +209,14 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselSimiosAutoplaying"
                         data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span aria-hidden="true"><i class="bi bi-arrow-left-circle-fill display-4"></i></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselSimiosAutoplaying"
                         data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span aria-hidden="true"><i class="bi bi-arrow-right-circle-fill display-4"></i></span>
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
@@ -255,7 +255,7 @@
                             alt="Foto Luís Duarte Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Luís Duarte</h3>
-                            <p class="card-text text-white lh-1">Documenter e Tester</p>
+                            <p class="card-text text-white lh-1">Documenter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -264,7 +264,7 @@
                             alt="Foto Melissa Almeida Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Melissa Almeida</h3>
-                            <p class="card-text text-white lh-1">Coordenadora do Design e Designer</p>
+                            <p class="card-text text-white lh-1">Coordenadora e Designer</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -282,7 +282,7 @@
                             alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                             <h3 class="card-title text-white fs-2 w-50 lh-1">Julie Godoi</h3>
-                            <p class="card-text text-white lh-1">Coordenadora do Desenvolvimento e Desenvolvedora</p>
+                            <p class="card-text text-white lh-1">Coordenadora e Desenvolvedora</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
@@ -443,5 +443,4 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
