--- a/index.html
+++ b/index.html
@@ -177,29 +177,29 @@
                         class="carousel slide col-7 p-0 d-none d-md-block d-lg-block d-xl-block"
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active" data-bs-interval="7000">
                                 <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100"
                                     alt="Roda de Conversas">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/fisioterapia.png" class="d-block w-100" alt="Fisioterapia">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100"
                                     alt="Sessões de Filmes">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/jogos.png" class="d-block w-100" alt="Jogos">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying"
                             data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span aria-hidden="true"><i class="bi bi-arrow-left-circle-fill fs-2"></i></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying"
                             data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span aria-hidden="true"><i class="bi bi-arrow-right-circle-fill fs-2"></i></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
@@ -208,30 +208,30 @@
                         class="carousel slide carrossel col-7 p-0 d-block d-md-none d-lg-none d-xl-none"
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active" data-bs-interval="7000">
                                 <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100"
                                     alt="Roda de Conversas">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100"
                                     alt="Fisioterapia">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100"
                                     alt="Sessões de Filmes">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-bs-interval="7000">
                                 <img src="./img/carrossel/mobile/jogos.png" class="d-block w-100" alt="Jogos">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselMobileAutoplaying"
                             data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span aria-hidden="true"><i class="bi bi-arrow-left-circle-fill display-5"></i></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselMobileAutoplaying"
                             data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span aria-hidden="true"><i class="bi bi-arrow-right-circle-fill display-5"></i></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
@@ -253,7 +253,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
-                        <img class="img-fluid" src="./img/maos-dadas.png" alt="Mãoes dadas">
+                        <img class="img-fluid" src="./img/maos-dadas.png" alt="Mãos dadas">
                     </div>
                 </div>
             </div>
