--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Grupo Viver Mais</title>
     <meta name="description"
         content="ONG Grupo de Idosos Viver Mais: Fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.">
+    <meta name="keywords" content="ONG de Idosos, Grupo Viver Mais, GIVM, Idosos em Arcoverde, Apoio a idosos, Bem-estar dos idosos, Comunidade de idosos em Pernambuco" />
     <link rel="shortcut icon" href="./img/logo/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
