style: aplica dry na repetição de margin do p-apoia

--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
                         <div class="p-apoia text-black">
-                            <p class="m-0">BANCO SICRED</p>
-                            <p class="m-0">CNPJ: 10.336.954/0001-23</p>
-                            <p class="m-0">GRUPO DE IDOSOS VIVER MAIS</p>
-                            <p class="m-0">CHAVE PIX: vivermaisosc@gmail.com</p>
+                            <p>BANCO SICRED</p>
+                            <p>CNPJ: 10.336.954/0001-23</p>
+                            <p>GRUPO DE IDOSOS VIVER MAIS</p>
+                            <p>CHAVE PIX: vivermaisosc@gmail.com</p>
                         </div>
                     </div>
                 </div>
