--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -43,8 +43,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal"
-                            data-bs-target="#transparenciaModal">Transparência</a>
+                       <!--<a class="nav-link" role="button" data-bs-toggle="modal"
+                            data-bs-target="#transparenciaModal">Transparência</a>--> 
                     </li>
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
@@ -361,11 +361,13 @@
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
-                <div class="modal-header">
+                <!--
+ <div class="modal-header">
                     <h2 class="modal-title fs-1" id="transparenciaModalLabel">Transparência</h2>
                     <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
+                -->
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
                     suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
@@ -399,8 +401,10 @@
                             data-bs-target="#quemSomosModal">Quem Somos</a>
                         <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal"
                             data-bs-target="#estatutoModal">Estatuto</a>
-                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal"
+                            <!--
+ <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal"
                             data-bs-target="#transparenciaModal">Transparência</a>
+                            -->
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
